Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/digital_biomarkers.css
+++ b/mcidashboard/mcidashboard-front/src/css/digital_biomarkers.css
@@ -24,10 +24,6 @@
         width: 360px;
     }
     
-    .personal-info{
-        width: 1000px;
-    }
-    
 
 }
 
