--- a/mcidashboard/mcidashboard-front/src/css/diverging_chart.css
+++ b/mcidashboard/mcidashboard-front/src/css/diverging_chart.css
@@ -23,9 +23,3 @@
     font-size: 24px;
 }
 
-@media only screen and (max-width: 1528px) {
-    .chart-container-div-charts {
-        width: 80%;
-        height: 400px;
-    }
-}
